force-app/main/default/objects/OI_Scan_Task__c/OI_Scan_Task__c.object-meta.xml
<CustomObject>
    <label>OI Scan Task</label>
    <pluralLabel>OI Scan Tasks</pluralLabel>
    <nameField>
        <label>Scan Task Name</label>
        <type>AutoNumber</type>
        <displayFormat>TASK-{00000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>One row per metadata-type scanner invocation within a Scan Run — orchestration outcome tracking only. Application-internal (ADR-0006).</description>
</CustomObject>