force-app/main/default/objects/OI_Scan_Task__c/fields/Coverage_Detail__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Detail__c</fullName>
    <description>Plain-language explanation of why this task's dependency extraction was Partial or Degraded, written for an administrator rather than a developer. Blank when coverage is Complete, since there is nothing to explain.</description>
    <label>Coverage Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>