force-app/main/default/objects/OI_Scan_Task__c/fields/Coverage_Status__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Status__c</fullName>
    <description>How complete this task's relationship (dependency) extraction was. Complete = everything this scanner supports was extracted. Partial = a permanent, by-design boundary on what this scanner covers. Degraded = this run could not extract what it normally would, and may succeed after a permission or configuration change.</description>
    <inlineHelpText>Complete, Partial, or Degraded. Partial is a known product boundary; Degraded is situational and may be fixable.</inlineHelpText>
    <label>Coverage Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>