force-app/main/default/objects/OI_Scan_Task__c/fields/Is_Full_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Snapshot__c</fullName>
    <label>Is Full Snapshot</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Mirrors OI_DiscoveryBatch.isFullSnapshot — must only be true if every chunk of this type's fetch succeeded; gates retire-detection.</description>
</CustomField>