force-app/main/default/objects/OI_Scan_Task__c/fields/Last_Successful_Watermark__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Watermark__c</fullName>
    <label>Last Successful Watermark</label>
    <type>DateTime</type>
</CustomField>