force-app/main/default/objects/OI_Scan_Task__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata Type</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>The Scanner's own componentKind vocabulary (e.g. CustomObject, ApexClass, Flow) — not a Graph typeKey.</description>
</CustomField>