force-app/main/default/objects/OI_Scan_Task__c/fields/Records_Changed__c.field-meta.xml
<CustomField>
    <fullName>Records_Changed__c</fullName>
    <label>Records Changed</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>