force-app/main/default/objects/OI_Scan_Task__c/fields/Relationships_Discovered__c.field-meta.xml
<CustomField>
    <fullName>Relationships_Discovered__c</fullName>
    <description>How many dependency relationships this task's scanner discovered before ingestion. Compared against Relationships_Skipped__c to distinguish "this type genuinely has few dependencies" from "dependencies were found and then dropped".</description>
    <label>Relationships Discovered</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>