force-app/main/default/objects/OI_Scan_Task__c/fields/Relationships_Skipped__c.field-meta.xml
<CustomField>
    <fullName>Relationships_Skipped__c</fullName>
    <description>How many discovered relationships were dropped during ingestion because an endpoint could not be resolved to a graph node. A non-zero value means real dependencies were found and then discarded, which is worth investigating; zero means every discovered relationship reached the graph.</description>
    <label>Relationships Skipped</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>