force-app/main/default/objects/OI_Scan_Task__c/fields/Retry_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt_Count__c</fullName>
    <label>Retry Attempt Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>