force-app/main/default/objects/OI_Scan_Task__c/fields/Scan_Run__c.field-meta.xml
<CustomField>
    <fullName>Scan_Run__c</fullName>
    <label>Scan Run</label>
    <type>MasterDetail</type>
    <referenceTo>OI_Scan_Run__c</referenceTo>
    <relationshipName>OI_Scan_Tasks</relationshipName>
    <relationshipLabel>OI Scan Tasks</relationshipLabel>
</CustomField>